// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-found has a cause 1`] = `

<div>
  <section class="flex grow flex-col justify-between">
    <div>
      <nav
        class="flex gap-4 md:gap-0 px-8 py-4 items-center justify-between border-b-[1px] border-solid"
        role="navigation"
      >
        <div class="flex w-full h-full items-center justify-end">
          <div class="flex items-baseline flex-1">
            <gui-logo>
            </gui-logo>
            <div class="ml-6">
              <p class="text-md font-medium">
                Dashboard
              </p>
            </div>
          </div>
          <gui-theme-switcher>
          </gui-theme-switcher>
          <gui-button
            classname="ml-2"
            variant="outline"
          >
            <gui-layout-dashboard-icon size="12">
            </gui-layout-dashboard-icon>
            Back to Dashboard
          </gui-button>
        </div>
      </nav>
    </div>
    <div class="grid grid-cols-5 pt-12">
      <div class="col-span3 col-start-2">
        <gui-title classname="flex text-2xl text-primary leading-10 p-6">
          <gui-battery-low-icon
            size="40"
            classname="mr-4"
          >
          </gui-battery-low-icon>
          Error Found!
        </gui-title>
        <p class="px-6">
          Failed because of...
        </p>
      </div>
    </div>
  </section>
</div>

`;

exports[`render default 1`] = `

<div>
  <section class="flex grow flex-col justify-between">
    <div>
      <nav
        class="flex gap-4 md:gap-0 px-8 py-4 items-center justify-between border-b-[1px] border-solid"
        role="navigation"
      >
        <div class="flex w-full h-full items-center justify-end">
          <div class="flex items-baseline flex-1">
            <gui-logo>
            </gui-logo>
            <div class="ml-6">
              <p class="text-md font-medium">
                Dashboard
              </p>
            </div>
          </div>
          <gui-theme-switcher>
          </gui-theme-switcher>
          <gui-button
            classname="ml-2"
            variant="outline"
          >
            <gui-layout-dashboard-icon size="12">
            </gui-layout-dashboard-icon>
            Back to Dashboard
          </gui-button>
        </div>
      </nav>
    </div>
    <div class="grid grid-cols-5 pt-12">
      <div class="col-span3 col-start-2">
        <gui-title classname="flex text-2xl text-primary leading-10 p-6">
          <gui-battery-low-icon
            size="40"
            classname="mr-4"
          >
          </gui-battery-low-icon>
          Error Found!
        </gui-title>
        <p class="px-6">
        </p>
      </div>
    </div>
  </section>
</div>

`;
